# chess

./: Board.cpp  Board.h  CMakeLists.txt  Human.cpp  Human.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h  Makefile  Piece.h  README.md  bishop.cpp  bishop.h  board.cpp  board.h  graphobserver.cpp  graphobserver.h  human.cpp  human.h  king.cpp  king.h  knight.cpp  knight.h  level1.cpp  level1.h  level2.cpp  level2.h  level3.cpp  level3.h  level4.cpp  level4.h  main.cpp  observer.cpp  observer.h  pawn.cpp  pawn.h  piece.cpp  (+13 more)
